Make UI presentation theme reactive